--- a/protocol-overview/credits.mdx
+++ b/protocol-overview/credits.mdx
@@ -33,26 +33,9 @@ Base pricing is calculated for 1024x1024 resolution with 20 iterations. Other re
 | Hunyuan | 5 seconds | 25 |
 
 #### 3. Large Language Models
-Pricing is in credits per million tokens. Each model has separate pricing for input tokens (what you send as prompts) and output tokens (what the model generates).
+LLM pricing has moved. See the consolidated table in Supported Models:
 
-| Model | Input (per 1M tokens) | Output (per 1M tokens) |
-|-------|----------------------|------------------------|
-| nvidia/llama-3.1-nemotron-70b-instruct | 15 | 30 |
-| qwen/qwen-2.5-coder-32b-instruct | 10 | 18 |
-| mistralai/mixtral-8x7b-instruct | 25 | 25 |
-| mistralai/mixtral-8x22b-instruct | 100 | 100 |
-| meta-llama/llama-3.3-70b-instruct | 15 | 30 |
-| NousResearch/Hermes-3-Llama-3.1-8B | 10 | 10 |
-| deepseek/deepseek-r1 | 300 | 300 |
-| deepseek/deepseek-v3 | 100 | 100 |
-| deepseek/deepseek-r1-distill-llama-70b | 80 | 80 |
-| NaniDAO/deepseek-r1-qwen-2.5-32B-ablated | 30 | 30 |
-| mistralai/mistral-small-24b-instruct | 30 | 30 |
-
-For example, if you send a prompt of 1,000 tokens to Mixtral 8x7B and receive a 500-token response:
-- Input cost: (1,000 / 1,000,000) × 25 = 0.025 credits
-- Output cost: (500 / 1,000,000) × 25 = 0.0125 credits
-- Total cost: 0.0375 credits
+- [Supported Models → LLM Credits Table](/dev-guide/supported-models#llm-credits-table)
 
 #### 4. Embedding Models
 Pricing is in credits per million tokens.
