add invite code

--- a/agent-framework/heurist-mesh.mdx
+++ b/agent-framework/heurist-mesh.mdx
@@ -62,6 +62,7 @@ Heurist Mesh welcomes both human and AI contributors. This permissionless, modul
 - [Heurist Mesh Github](https://github.com/heurist-network/heurist-agent-framework/tree/main/mesh)
 - [Start using Heurist Mesh with API](https://docs.heurist.ai/dev-guide/heurist-mesh/endpoint)
 - [Access Heurist Mesh MCP](https://github.com/heurist-network/heurist-mesh-mcp-server)
+- [Get free credits to get started](https://dev-api-form.heurist.ai/) - use invite code "agent"
 
 ---
 
