restructure, and add x402 products

--- a/ecosystem/heurist-deep-research.mdx
+++ b/ecosystem/heurist-deep-research.mdx
@@ -43,7 +43,7 @@ Heurist Deep Research transforms how professionals conduct research. Market rese
 
 ## API Access
 
-Programmatic access to Heurist Deep Research is available through our [Heurist Mesh API](../dev-guide/heurist-mesh/introduction). Integration enables automated research workflows, bulk query processing, custom agent orchestration, and result streaming with webhooks.
+Programmatic access to Heurist Deep Research is available through our [Heurist Mesh API](/heurist-mesh/rest-api). Integration enables automated research workflows, bulk query processing, custom agent orchestration, and result streaming with webhooks.
 
 ## Privacy & Security
 
