--- a/ecosystem/imagine.mdx
+++ b/ecosystem/imagine.mdx
@@ -5,7 +5,7 @@ description: "Heurist Imagine is an AI image and video generator. Users can gene
 
 ### Features
 
-We support various image generation models including finetuned flavors of Stable Diffusion and Flux models. See our complete [model list](../dev-guide/supported-models#image-generation-models).
+We support various image generation models including finetuned flavors of Stable Diffusion and Flux models. See our complete [model list](/llm-gateway/supported-models#image-generation-models).
 
 #### Prompt
 
@@ -27,12 +27,12 @@ Prompt weighting allows you to emphasize or de-emphasize certain parts of a prom
 
 #### Difference between Flux and Stable Diffusion Prompting
 
-See this [advanced guide](../dev-guide/supported-models#understanding-image-prompting) for more information.
+See this [advanced guide](/llm-gateway/supported-models#understanding-image-prompting) for more information.
 
 #### API Access
 
-All models are available for API access. See [API documentation](../dev-guide/image-generation/introduction) for more information.
+All models are available for API access. Contact us at team@heurist.xyz for integration details.
 
 #### Video Generation
 
-We support multiple video generation models. The generation time is typically a few minutes. Video generation is also available for API access, see [Text-to-Video API documentation](../dev-guide/heurist-sdk/comfyui-txt2vid).
+We support multiple video generation models. The generation time is typically a few minutes.
