--- a/ecosystem/pondera.mdx
+++ b/ecosystem/pondera.mdx
@@ -17,7 +17,7 @@ Access specific models directly through URL parameters. Try these popular models
 - **DeepSeek R1**: [pondera.heurist.ai/?model=deepseek/deepseek-r1](https://pondera.heurist.ai/?model=deepseek/deepseek-r1)
 - **Qwen 2.5 Coder 32B**: [pondera.heurist.ai/?model=qwen/qwen-2.5-coder-32b-instruct](https://pondera.heurist.ai/?model=qwen/qwen-2.5-coder-32b-instruct)
 
-See our complete [model list](../dev-guide/supported-models#text-generation-models) for all available options.
+See our complete [model list](/llm-gateway/supported-models#text-generation-models) for all available options.
 
 ## Key Features
 
@@ -44,7 +44,7 @@ Different models excel at different tasks. For general purpose conversations, Ll
 
 ## API Access
 
-All Pondera models are available via our API for programmatic access. The [LLM Gateway documentation](../dev-guide/llm-gateway/introduction) provides complete integration details including streaming responses, function calling capabilities, embeddings generation, and batch processing for multiple queries.
+All Pondera models are available via our API for programmatic access. The [LLM Gateway documentation](/llm-gateway/introduction) provides complete integration details including streaming responses, function calling capabilities, embeddings generation, and batch processing for multiple queries.
 
 ## Privacy & Pricing
 
