--- a/heurist-mesh/api-playground.mdx
+++ b/heurist-mesh/api-playground.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Synchronous Request"
+title: "API Playground"
 openapi: "POST /mesh_request"
 ---
 
@@ -8,7 +8,7 @@ The synchronous endpoint allows immediate interaction with AI agents and tools.
 ## Base URL
 
 ```bash
-https://sequencer-v2.heurist.xyz
+https://mesh.heurist.xyz
 ```
 
 ## Authentication
