--- a/introduction.mdx
+++ b/introduction.mdx
@@ -19,7 +19,9 @@ Heurist is the full-stack infrastructure for the AI economy. We unite the AI eco
 
 ### Core Infrastructure
 
-- **Heurist Cloud**: Access AI models through simple APIs without managing GPU infrastructure. We provide serverless inference for LLMs, VLMs, image/video generation models, and more. Heurist Cloud also includes [Heurist Mesh](https://docs.heurist.ai/agent-framework/heurist-mesh), our marketplace of specialized AI agents that work together in a composable agent swarm, from token analysis to social media intelligence, fully compatible with MCP standards and A2A protocol. Learn more about our [Supported Model List](https://docs.heurist.ai/dev-guide/supported-models).
+- **Heurist Cloud**: Access AI models through simple APIs without managing GPU infrastructure. We provide serverless inference for LLMs, VLMs, image/video generation models, and more. Learn more about our [Supported Model List](https://docs.heurist.ai/llm-gateway/supported-models).
+
+- **Heurist Mesh**: The marketplace of specialized AI agents. We turn curateed, high-quality Web2 and Web3 data sources and APIs into composable units of agents, capable of building complex workflows from token analysis to social media intelligence. Equip any agent or any application with crypto expertise with Heurist Mesh. It is fully compatible with MCP, A2A and x402 payment protocols. 
 
 - **Heurist Chain**: Our ZK Layer 2 infrastructure powers the payment rails for autonomous AI systems. Enable instant, low-fee micropayments between agents, pay for AI services on-demand, and build commerce-enabled AI applications without traditional payment barriers.
 
@@ -28,31 +30,6 @@ Heurist is the full-stack infrastructure for the AI economy. We unite the AI eco
 ### Open Source Foundation
 - **Heurist Agent Framework**: The backbone of our ecosystem - an open-source framework for building AI agents that connect to Heurist services and interact with other agents. Create agents that acquire knowledge, execute complex tasks autonomously, and contribute to the growing agent marketplace. [Start building with our framework](https://agent.heurist.ai/)
 
-### Ecosystem Applications
-Experience the power of Heurist through our flagship applications:
-<CardGroup cols={3}>
-  <Card
-    title="Heurist Imagine"
-    icon="image"
-    href="https://imagine.heurist.ai"
-  >
-    Generate stunning AI images and videos with state-of-the-art models
-  </Card>
-  <Card
-    title="Pondera"
-    icon="message"
-    href="https://pondera.heurist.ai"
-  >
-    Chat with advanced AI assistants powered by cutting-edge language models
-  </Card>
-  <Card
-    title="Heurist Deep Research"
-    icon="magnifying-glass"
-    href="https://research.heurist.ai"
-  >
-    Deploy multiple agents to scan hundreds of pages in minutes. Payments powered by x402 protocol
-  </Card>
-</CardGroup>
 
 ### Get Started
 <CardGroup cols={2}>
@@ -66,7 +43,7 @@ Experience the power of Heurist through our flagship applications:
   <Card
     title="Start Building"
     icon="code"
-    href="https://docs.heurist.ai/dev-guide/integration-overview"
+    href="https://docs.heurist.ai/integration-overview"
   >
     Integrate Heurist AI services with just a few lines of code
   </Card>
@@ -75,7 +52,7 @@ Experience the power of Heurist through our flagship applications:
   <Card
     title="Heurist Mesh Agents"
     icon="network-wired"
-    href="https://docs.heurist.ai/agent-framework/heurist-mesh"
+    href="https://docs.heurist.ai/heurist-mesh/overview"
   >
     Access specialized agents via REST APIs and MCP
   </Card>
