--- a/llm-gateway/supported-models.mdx
+++ b/llm-gateway/supported-models.mdx
@@ -7,7 +7,7 @@ description: "Explore a wide range of AI models. We support models for natural l
 
 You can use the following model name as `model_id` in Heurist API/SDK.
 
-For interactive testing and API exploration, visit our [Chat Completion Endpoint](https://docs.heurist.ai/dev-guide/llm-gateway/endpoint) documentation which includes a built-in API testing interface.
+For interactive testing and API exploration, visit our [Chat Completion Endpoint](https://docs.heurist.ai/llm-gateway/endpoint) documentation which includes a built-in API testing interface.
 To estimate usage costs in credits, see the LLM Credits Table below.
 
 ### Large Language Models (LLMs)
