--- a/heurist-mesh/rest-api.mdx
+++ b/heurist-mesh/rest-api.mdx
@@ -2,7 +2,7 @@
 title: "Heurist Mesh API"
 ---
 
-The Heurist Mesh REST API enables interaction with AI agents and tools through HTTP endpoints. Supports both synchronous and asynchronous operations.
+The Heurist Mesh REST API enables interaction with AI agents and tools through HTTP endpoints.
 
 This API is part of the [open source Heurist Agent Framework](https://github.com/heurist-network/heurist-agent-framework/tree/main/mesh). Contributions are highly encouraged!
 
@@ -10,7 +10,7 @@ This API is part of the [open source Heurist Agent Framework](https://github.com
 
 ```javascript
 // Example: Get token info synchronously
-const response = await fetch("https://sequencer-v2.heurist.xyz/mesh_request", {
+const response = await fetch("https://mesh.heurist.xyz/mesh_request", {
   method: "POST",
   headers: { "Content-Type": "application/json" },
   body: JSON.stringify({
@@ -25,7 +25,7 @@ const response = await fetch("https://sequencer-v2.heurist.xyz/mesh_request", {
 });
 ```
 
-## Endpoints
+## Endpoint
 
 ### Synchronous Request
 `POST /mesh_request`
@@ -52,61 +52,6 @@ Make a request with immediate response.
 }
 ```
 
-### Create Asynchronous Task
-`POST /mesh_task_create`
-
-Create a task and receive a task ID.
-
-```json
-{
-  "api_key": "your_api_key_here",
-  "agent_id": "agent_identifier",
-  "agent_type": "AGENT",  // optional
-  "task_details": {
-    // Use either query OR tool+tool_arguments
-    "query": "natural language query",
-    // OR
-    "tool": "tool_name",
-    "tool_arguments": { /* tool-specific args */ },
-    "raw_data_only": false  // optional, defaults to false
-  }
-}
-
-// Response
-{
-  "task_id": "unique_task_identifier",
-  "msg": "status_message"
-}
-```
-
-### Query Task Status
-`POST /mesh_task_query`
-
-Check status and get results of an async task.
-
-```json
-{
-  "api_key": "your_api_key_here",
-  "task_id": "task_identifier"
-}
-
-// Response
-{
-  "status": "task_status",
-  "reasoning_steps": [  // present when available
-    {
-      "timestamp": 1234567890,
-      "content": "step description",
-      "is_sent": true
-    }
-  ],
-  "result": {  // present when task is complete
-    "response": "agent response data",
-    "success": true  // or false
-  }
-}
-```
-
 ## Available Agents
 
 The Mesh API provides access to a growing collection of specialized agents. For a complete and up-to-date list, see the [Available Mesh Agents](https://github.com/heurist-network/heurist-agent-framework?tab=readme-ov-file#available-mesh-agents) section in the main repository README.
@@ -129,8 +74,7 @@ const agentTools = metadata.agents["CoinGeckoTokenInfoAgent"].tools;
 ### Natural Language Query
 
 ```javascript
-// Synchronous
-const response = await fetch("https://sequencer-v2.heurist.xyz/mesh_request", {
+const response = await fetch("https://mesh.heurist.xyz/mesh_request", {
   method: "POST",
   headers: { "Content-Type": "application/json" },
   body: JSON.stringify({
@@ -142,28 +86,13 @@ const response = await fetch("https://sequencer-v2.heurist.xyz/mesh_request", {
     }
   })
 });
-
-// Asynchronous
-const taskResponse = await fetch("https://sequencer-v2.heurist.xyz/mesh_task_create", {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify({
-    api_key: "YOUR_API_KEY",
-    agent_id: "CoinGeckoTokenInfoAgent",
-    task_details: {
-      query: "What is the current price of Bitcoin?",
-      raw_data_only: false
-    }
-  })
-});
-const { task_id } = await taskResponse.json();
 ```
 
 ### Tool Execution
 
 ```javascript
-// Raw data (synchronous)
-const response = await fetch("https://sequencer-v2.heurist.xyz/mesh_request", {
+// Raw data request
+const response = await fetch("https://mesh.heurist.xyz/mesh_request", {
   method: "POST",
   headers: { "Content-Type": "application/json" },
   body: JSON.stringify({
@@ -186,7 +115,7 @@ const response = await fetch("https://sequencer-v2.heurist.xyz/mesh_request", {
 ## Reference
 
 ### Base URL
-`https://sequencer-v2.heurist.xyz`
+`https://mesh.heurist.xyz`
 
 ### Authentication
 All requests require an API key in the request payload at the root level.
@@ -198,14 +127,5 @@ All requests require an API key in the request payload at the root level.
 {
   "response": "any",  // varies by agent
   "success": true     // boolean
-}
-```
-
-**Reasoning Step**
-```json
-{
-  "timestamp": 1234567890,  // Unix timestamp
-  "content": "string",      // step description
-  "is_sent": true           // boolean
 }
 ```
