add x402 examples link

--- a/x402-products/facilitator.mdx
+++ b/x402-products/facilitator.mdx
@@ -9,7 +9,7 @@ The Heurist x402 Facilitator enables you to monetize your API or service instant
 
 ## One-Line Integration
 
-Monetize your API in minutes. Here's all it takes:
+To accept x402 payments, here's all it takes:
 
 ```javascript
 import express from "express";
@@ -21,6 +21,8 @@ app.use(payTo, routes, {
 ```
 
 That's it. Your API now accepts x402 payments from anywhere in the world.
+
+For more detailed integration examples using Express.js, Hono, FastAPI, vanilla JavaScript and Python, see the [official website](https://facilitator.heurist.xyz/#start-building).
 
 ## Enterprise-Grade Features
 
