--- a/introduction.mdx
+++ b/introduction.mdx
@@ -15,15 +15,15 @@ title: "Welcome to Heurist"
 
 ## Introducing Heurist
 
-Heurist is the full-stack infrastructure for the AI economy. We unite the AI ecosystem through comprehensive infrastructure. From compute to capital, we provide everything needed to build, scale, and fund the next generation of intelligent applications.
+Heurist is the full-stack infrastructure for the AI economy. From compute to capital, we provide everything needed to build, scale, and fund the next generation of intelligent applications.
 
-### Core Infrastructure
+### Core Products
 
-- **Heurist Cloud**: Access AI models through simple APIs without managing GPU infrastructure. We provide serverless inference for LLMs, VLMs, image/video generation models, and more. Learn more about our [Supported Model List](https://docs.heurist.ai/llm-gateway/supported-models).
-
-- **Heurist Mesh**: The marketplace of specialized AI agents. We turn curateed, high-quality Web2 and Web3 data sources and APIs into composable units of agents, capable of building complex workflows from token analysis to social media intelligence. Equip any agent or any application with crypto expertise with Heurist Mesh. It is fully compatible with MCP, A2A and x402 payment protocols. 
+- **Heurist Mesh**: The marketplace of specialized AI agents. We turn curated, high-quality Web2 and Web3 data sources and APIs into composable units of agents, capable of building complex workflows from token analysis to social media intelligence. Equip any agent or any application with crypto expertise with Heurist Mesh. It is fully compatible with MCP, A2A and x402 payment protocols. 
 
 - **Heurist Chain**: Our ZK Layer 2 infrastructure powers the payment rails for autonomous AI systems. Enable instant, low-fee micropayments between agents, pay for AI services on-demand, and build commerce-enabled AI applications without traditional payment barriers.
+
+- **x402 Facilitator**: We enable instant USDC micropayments between agents, pay for AI services on-demand, and build commerce-enabled AI applications without traditional payment barriers.
 
 - **Heurist Digital Assets (Beta)**: Regulated platform for AI startup tokenization. We enable companies to tokenize equity and raise capital globally. Connect with global investors, ensure transparent cap table management, and unlock liquidity for early stakeholders while maintaining full regulatory compliance and security standards. [Explore tokenization opportunities](https://tokenize.heurist.ai)
 
