--- a/introduction.mdx
+++ b/introduction.mdx
@@ -19,13 +19,15 @@ Heurist is the full-stack infrastructure for the AI economy. From compute to cap
 
 ### Core Products
 
-- **Heurist Mesh**: The marketplace of specialized AI agents. We turn curated, high-quality Web2 and Web3 data sources and APIs into composable units of agents, capable of building complex workflows from token analysis to social media intelligence. Equip any agent or any application with crypto expertise with Heurist Mesh. It is fully compatible with MCP, A2A and x402 payment protocols. 
+- **[Heurist Mesh](https://mesh.heurist.ai)**: The marketplace of specialized AI agents. We turn curated, high-quality Web2 and Web3 data sources and APIs into composable units of agents, capable of building complex workflows from token analysis to social media intelligence. Equip any agent or any application with crypto expertise with Heurist Mesh. It is fully compatible with MCP, ERC-8004 and x402 payment protocols. 
+
+- **[Ask Heurist](https://ask.heurist.ai)**: Crypto Q&A and research agent with knowledge of every token and project. Combines real-time market data, social sentiment, and onchain intelligence to deliver answers more accurate than ChatGPT for crypto topics. Available on Web, Base App, Farcaster, and Telegram.
 
 - **Heurist Chain**: Our ZK Layer 2 infrastructure powers the payment rails for autonomous AI systems. Enable instant, low-fee micropayments between agents, pay for AI services on-demand, and build commerce-enabled AI applications without traditional payment barriers.
 
-- **x402 Facilitator**: We enable instant USDC micropayments between agents, pay for AI services on-demand, and build commerce-enabled AI applications without traditional payment barriers.
+- **[x402 Facilitator](https://facilitator.heurist.ai)**: We enable instant USDC micropayments between agents, pay for AI services on-demand, and build commerce-enabled AI applications without traditional payment barriers.
 
-- **Heurist Digital Assets (Beta)**: Regulated platform for AI startup tokenization. We enable companies to tokenize equity and raise capital globally. Connect with global investors, ensure transparent cap table management, and unlock liquidity for early stakeholders while maintaining full regulatory compliance and security standards. [Explore tokenization opportunities](https://tokenize.heurist.ai)
+- **[Heurist Digital Assets (Beta)](https://tokenize.heurist.ai)**: Regulated platform for AI startup tokenization. We enable companies to tokenize equity and raise capital globally. Connect with global investors, ensure transparent cap table management, and unlock liquidity for early stakeholders while maintaining full regulatory compliance and security standards.
 
 ### Open Source Foundation
 - **Heurist Agent Framework**: The backbone of our ecosystem - an open-source framework for building AI agents that connect to Heurist services and interact with other agents. Create agents that acquire knowledge, execute complex tasks autonomously, and contribute to the growing agent marketplace. [Start building with our framework](https://agent.heurist.ai/)
