--- a/heurist-mesh/overview.mdx
+++ b/heurist-mesh/overview.mdx
@@ -10,7 +10,7 @@ description: "AI Agents as a Service - Modular, flexible, and crypto-native AI a
 Heurist Mesh is the skills marketplace for AI agents. General-purpose AI models lack specialized knowledge about Web3, and often fail to deliver accurate and relevant results. Heurist Mesh solves this by providing a marketplace of specialized AI agents that are experts in crypto analytics, ready to give your applications or agents the crypto expertise they need.
 
 - **Composable Architecture**: Mix and match specialized agents for different tasks
-- **Flexible Access**: We support REST API with API key access, x402-enabled pay-per-use API, and MCP access.
+- **Flexible Access**: We support REST API with API key access, x402-enabled pay-per-use API, and MCP access. Agents are registered with ERC-8004 Trusted Agents standard.
 - **Curated Web3 Tools**: We curate the best Web3 tools to give your agents the best possible performance. We constantly monitor and update the tools we use to ensure they are always performant.
 - **Optimized for Agents**: The input and output formats are optimized for AI agents to easily comprehend and use. Tool call rounds are reduced by 70% and token usage is reduced by 30~50% compared to simple API wrappers.
 
@@ -20,6 +20,8 @@ Heurist Mesh is the skills marketplace for AI agents. General-purpose AI models 
 - **Agent List**: View the complete agent list on [GitHub](https://github.com/heurist-network/heurist-agent-framework/tree/main/mesh)
 - **REST API**: See the [REST API documentation](/heurist-mesh/rest-api) for integration details
 - **X402 API**: Access the x402-enabled agent list at [mesh.heurist.xyz/x402/agents](https://mesh.heurist.xyz/x402/agents)
+- **ERC-8004 Discoverability**: Visit [8004scan](https://www.8004scan.io/) and search for "Heurist Mesh" for the full list of registered agents on Ethereum.
+- **Skill for Moltbot (formerly Clawdbot)**: Install [Heurist Mesh Skill](https://clawdhub.com/wjw12/heurist-mesh) and turn your Moltbot into a crypto expert.
 
 ## Available Agents
 
@@ -31,7 +33,7 @@ Heurist Mesh provides 30+ specialized agents spanning across these categories:
   - Trending Tokens: find trending tokens across all chains and social media
 - Token information (CoinGecko, DexScreener, Bitquery, etc.)
 - Social media (Twitter, Elfa, Moni, etc.)
-- Blockchain data (Etherscan, Arkham Intelligence, Space and Time, etc.)
-- Web Search (Exa, Firecrawl, with summarization)
-- Crypto products (Pump.fun, LetsBonk, Zora,  etc.)
-- Wallet analysis (Pond AI, GoPlus, etc.)
+- Blockchain data (Etherscan, ChainBase, Space and Time, etc.)
+- Web Search (Exa, Firecrawl, with AI extraction and summarization)
+- Crypto products (Pump.fun, LetsBonk, Zora, etc.)
+- Wallet analysis (Pond AI, GoPlus, Zerion, etc.)
