add ask heurist biz plan, remove imagine

--- a/ask-heurist.mdx
+++ b/ask-heurist.mdx
@@ -10,7 +10,7 @@ description: "Crypto Q&A and research agent with real-time market data, social s
 
 ## Overview
 
-Ask Heurist is a crypto Q&A and research agent built for traders, researchers, and crypto-natives. It delivers actionable insights across market data, social sentiment from Twitter and Telegram trading channels, and onchain data. From trending narratives to specific token analysis, Ask Heurist turns crypto noise into tradable clarity.
+Ask Heurist is a crypto Q&A and research agent built for traders and crypto analysts. It delivers actionable insights across market data, social sentiment from Twitter and Telegram trading channels, and onchain data. From trending narratives to specific token analysis, Ask Heurist turns crypto noise into tradable clarity.
 
 The platform excels at DEX tokens, including memecoins that launched an hour ago and niche assets like Zora creator coins. With access to the most up-to-date data on virtually every token, it achieves higher accuracy than general-purpose AI for crypto-specific queries.
 
@@ -61,7 +61,7 @@ Visit [ask.heurist.ai](https://ask.heurist.ai) to start asking questions. Choose
 ## Pricing
 
 ### Free Daily Credits
-Every user receives free usage credits daily. Fast mode costs 1 credit, Deep mode costs 2 credits.
+Every user receives free usage credits daily.
 
 **Increase your daily limit:**
 - Hold or stake HEU tokens in your wallet
@@ -76,3 +76,33 @@ When daily credits are exhausted, pay-per-use kicks in:
 | Deep | $0.10 |
 
 Payments are processed in USDC on Base via the [x402 protocol](/x402-products/facilitator).
+
+### Business Plans
+
+For teams and enterprises requiring higher usage limits and dedicated support, we offer monthly subscription plans.
+
+**Plan Tiers**
+
+| Plan       | Credits/Month | Price        |
+|------------|---------------|--------------|
+| Starter    | 100,000       | $499/month   |
+| Growth     | 500,000       | $1,999/month |
+| Enterprise | Custom        | Contact us   |
+
+**Credit Usage**
+
+Credits are consumed based on query complexity:
+
+- **Normal Mode**: 1-5 credits per query
+- **Deep Mode**: 10-20 credits per query (depending on complexity)
+
+For enterprise users, our Enterprise plan can help you customize and scale your product:
+
+- **Higher usage limits**: tailored to your throughput needs
+- **Advanced analytics**: deeper insights into usage patterns and query performance
+- **Custom data source integration**: connect proprietary data feeds or internal knowledge bases
+- **Dedicated support**: priority assistance from our team
+
+**Get Started**
+
+Ready to scale your crypto intelligence? Contact us at [team@heurist.xyz](mailto:team@heurist.xyz).
