--- a/introduction.mdx
+++ b/introduction.mdx
@@ -45,7 +45,7 @@ Heurist is the full-stack infrastructure for the AI economy. From compute to cap
   <Card
     title="Start Building"
     icon="code"
-    href="https://docs.heurist.ai/integration-overview"
+    href="https://docs.heurist.ai/heurist-mesh/overview"
   >
     Integrate Heurist AI services with just a few lines of code
   </Card>
