separate heurist mesh api and mcp

--- a/heurist-mesh/overview.mdx
+++ b/heurist-mesh/overview.mdx
@@ -18,8 +18,8 @@ Heurist Mesh is the skills marketplace for AI agents. General-purpose AI models 
 
 - **Mesh Portal**: Visit [mesh.heurist.ai](https://mesh.heurist.ai) to browse all agents and deploy dedicated MCP servers
 - **Agent List**: View the complete agent list on [GitHub](https://github.com/heurist-network/heurist-agent-framework/tree/main/mesh)
-- **REST API**: See the [REST API documentation](/heurist-mesh/rest-api) for integration details
-- **X402 API**: Access the x402-enabled agent list at [mesh.heurist.xyz/x402/agents](https://mesh.heurist.xyz/x402/agents)
+- **API**: See the [API documentation](/heurist-mesh/api) for REST and x402 integration
+- **MCP**: See the [MCP documentation](/heurist-mesh/mcp) for MCP server access
 - **ERC-8004 Discoverability**: Visit [8004scan](https://www.8004scan.io/) and search for "Heurist Mesh" for the full list of registered agents on Ethereum.
 - **Skill for Moltbot (formerly Clawdbot)**: Install [Heurist Mesh Skill](https://clawdhub.com/wjw12/heurist-mesh) and turn your Moltbot into a crypto expert.
 
