--- a/protocol-overview/credits.mdx
+++ b/protocol-overview/credits.mdx
@@ -17,29 +17,21 @@ Credits can be purchased at [heurist.ai/credits](https://heurist.ai/credits).
 
 ### Credits Consumption
 
-#### 1. Image Generation
-Base pricing is calculated for 1024x1024 resolution with 20 iterations. Other resolutions or iteration counts are priced proportionally.
+#### Heurist Mesh
 
-| Model | Credits per Image |
-|-------|------------------|
-| Stable Diffusion XL/1.5 | 0.05 |
-| Stable Diffusion with LoRA | 0.1 |
-| FLUX.1-dev | 0.2 |
-| FLUX.1-dev with LoRA | 0.5 |
+Each agent on Heurist Mesh has multiple tools, and each tool has different pricing based on its resource consumption. Visit the [Mesh Console](https://mesh.heurist.ai/console) to view the agent card for detailed per-tool pricing.
 
-#### 2. Video Generation
-| Model | Duration | Credits |
-|-------|----------|----------|
-| Hunyuan | 5 seconds | 25 |
+#### Ask Heurist
 
-#### 3. Large Language Models
-LLM pricing has moved. See the consolidated table in Supported Models:
+Ask Heurist offers two query modes with different credit costs:
 
-- [Supported Models → LLM Credits Table](/llm-gateway/supported-models#llm-credits-table)
+| Mode | Cost |
+|------|------|
+| Fast | $0.02 |
+| Deep | $0.10 |
 
-#### 4. Embedding Models
-Pricing is in credits per million tokens.
+Learn more about Ask Heurist modes and pricing on the [Ask Heurist](/ask-heurist#pricing) page.
 
-| Model | Input (per 1M tokens) |
-|-------|----------------------|
-| baaiai/bge-large-en-v1.5 | 1 |
+#### Business Plans
+
+For teams and enterprises requiring higher usage limits and dedicated support, we offer monthly subscription plans. See the [Ask Heurist Business Plans](/ask-heurist#business-plans) section for details.
